fix: better readability in light theme

--- a/content/.vuepress/styles/index.scss
+++ b/content/.vuepress/styles/index.scss
@@ -25,8 +25,8 @@
   scroll-behavior: smooth;
 
   // brand colors
-  --c-brand: var(--nord14);
-  --c-brand-light: var(--nord14);
+  --c-brand: var(--nord10);
+  --c-brand-light: var(--nord9);
 
   // background colors
   --c-bg: var(--nord6);
@@ -100,9 +100,9 @@
   --code-ln-wrapper-width: 3.5rem;
 
   // font vars
-  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  --font-family-code: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  --font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  --font-family-code: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
 
   // layout vars
   --navbar-height: 3.6rem;
